--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ django-extensions
 django-probes
 django-debug-toolbar
 djangorestframework
+django-bootstrap-v5
 psycopg2
 python-dateutil
 pool-data-fetcher
